# claude-army

./: .gitignore  AGENTS.md  CLAUDE_STATUS_RESEARCH.md  OPERATOR_AGENTS.md  OPERATOR_AGENTS.template.md  OPERATOR_SPEC.md  PLAN.md  README.md  SPEC.md  TEST_CHECKLIST.md  TODO.md  bot_commands.py  claude-wrapper.sh  claude_process.py  daemon.py  daemon_core.py  frontend_adapter.py  install.sh  permission_hook.py  permission_server.py  process_manager.py  pyproject.toml  registry.py  run.sh  session_operator.py  session_worker.py  telegram-daemon.py  telegram-hook.py  telegram_adapter.py  telegram_poller.py  telegram_utils.py  test-deny.txt  test_claude_process.py  transcript_watcher.py  uninstall.sh
tests/: conftest.py  test_bot_commands.py  test_claude_process.py  test_daemon_core.py  test_frontend_adapter.py  test_install.py  test_integration.py  test_misc.py  test_permission_hook.py  test_permission_server.py  test_process_manager.py  test_registry.py  test_session_worker.py  test_telegram_adapter.py  test_telegram_poller.py  test_telegram_utils.py
